--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-native-community/eslint-config": "2.0.0",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
     "np": "^7.6.1",
