--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Install yarn dependencies
         run: |
           yarn install
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Build Android Release
         run: |
           cd android && ./gradlew bundleRelease assembleRelease
