--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           yarn install
       - name: Make gradlew executable
-        run: chmod +x ./gradlew
+        run: cd android && chmod +x ./gradlew
       - name: Build Android Release
         run: |
           cd android && ./gradlew bundleRelease assembleRelease
