--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,10 +147,10 @@ android {
     }
     signingConfigs {
         debug {
-            MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-            MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-            MYAPP_UPLOAD_STORE_PASSWORD=bill123
-            MYAPP_UPLOAD_KEY_PASSWORD=bill123
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
         }
         release {
             if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
