--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Install yarn dependencies
         run: |
           yarn install
-      # - name: Run tests
-      #   run: |
-      #     yarn test
+      - name: Run tests
+        run: |
+          yarn test
   build-android:
     needs: install-and-test
     runs-on: ubuntu-latest
